{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 20,
  "lineage": "08014f3b-ffde-db1a-4019-e7730c362335",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkInterfaces/SIRPBackendVM-nic",
            "internal_domain_name_suffix": "5wzcrmiope1ejeng3uycrkciff.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/publicIPAddresses/SIRPBackendVM-ip",
                "subnet_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/BackendSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-8D-6E-0A",
            "name": "SIRPBackendVM-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "SmartIncidentResponseRG",
            "virtual_machine_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Compute/virtualMachines/SIRPBackendVM"
          },
          "dependencies": [
            "azurerm_public_ip.backend_vm_ip",
            "azurerm_resource_group.sirp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "database_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkInterfaces/SIRPDatabaseVM-nic",
            "internal_domain_name_suffix": "5wzcrmiope1ejeng3uycrkciff.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/publicIPAddresses/SIRPDatabaseVM-ip",
                "subnet_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/DatabaseSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-33-9E-90",
            "name": "SIRPDatabaseVM-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "SmartIncidentResponseRG",
            "virtual_machine_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Compute/virtualMachines/SIRPDatabaseVM"
          },
          "dependencies": [
            "azurerm_public_ip.database_vm_ip",
            "azurerm_resource_group.sirp_rg",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/BackendSubnet-nsg",
            "location": "eastus",
            "name": "BackendSubnet-nsg",
            "resource_group_name": "SmartIncidentResponseRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowFastAPI",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "198.58.131.49/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow8000",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sirp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/DatabaseSubnet-nsg",
            "location": "eastus",
            "name": "DatabaseSubnet-nsg",
            "resource_group_name": "SmartIncidentResponseRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sirp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/publicIPAddresses/SIRPBackendVM-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.152.208",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SIRPBackendVM-ip",
            "resource_group_name": "SmartIncidentResponseRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.sirp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "database_vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/publicIPAddresses/SIRPDatabaseVM-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.234.129.52",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SIRPDatabaseVM-ip",
            "resource_group_name": "SmartIncidentResponseRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.sirp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/BackendSubnet",
            "name": "BackendSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SmartIncidentResponseRG",
            "virtual_network_name": "SmartIncidentResponseVNet"
          },
          "dependencies": [
            "azurerm_resource_group.sirp_rg",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/DatabaseSubnet",
            "name": "DatabaseSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SmartIncidentResponseRG",
            "virtual_network_name": "SmartIncidentResponseVNet"
          },
          "dependencies": [
            "azurerm_resource_group.sirp_rg",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/BackendSubnet",
            "network_security_group_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/BackendSubnet-nsg",
            "subnet_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/BackendSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.backend_nsg",
            "azurerm_resource_group.sirp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/DatabaseSubnet",
            "network_security_group_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/DatabaseSubnet-nsg",
            "subnet_id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/DatabaseSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.database_nsg",
            "azurerm_resource_group.sirp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.sirp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sirp_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b128b2fd-790e-4436-91a6-ed3028a8482d",
            "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet",
            "location": "eastus",
            "name": "SmartIncidentResponseVNet",
            "resource_group_name": "SmartIncidentResponseRG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/BackendSubnet",
                "name": "BackendSubnet",
                "security_group": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/BackendSubnet-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/virtualNetworks/SmartIncidentResponseVNet/subnets/DatabaseSubnet",
                "name": "DatabaseSubnet",
                "security_group": "/subscriptions/a8715d58-743d-4b54-b671-230ce91aab9b/resourceGroups/SmartIncidentResponseRG/providers/Microsoft.Network/networkSecurityGroups/DatabaseSubnet-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.sirp_rg"
          ]
        }
      ]
    }
  ]
}